// Cocobolo service defination

syntax = "proto3";

package cocobolo;

service Cocobolo {
    // Makes a request
    rpc MakeRequest (stream CallbackRequest) returns (stream CallbackResponse) {}
}
    
message CallbackRequest {
    string request_id = 1;
    string endpoint = 2;
    string method = 3;
    string body = 4;
    string headers = 5;
    string backoff_time = 6;
}

message CallbackResponse {
    string request_id = 1;
    string status_code = 2;
    string response = 3;
    string headers = 4;
    string backoff_time = 5;
}
